--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
-    "test": "bun test"
+    "test": "bun test",
+    "release": "release-it"
   },
   "dependencies": {
     "@clack/prompts": "^0.7.0",
@@ -32,6 +33,7 @@
     "@types/bun": "^1.3.5",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.10.2",
+    "release-it": "^19.2.4",
     "typescript": "^5.9.3"
   },
   "engines": {
