--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agentlink",
+  "name": "@caelinsutch/agentlink",
   "version": "0.1.2",
   "description": "Canonical .agents manager with symlinks for popular AI tools",
   "type": "module",
