--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,14 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # Finder (MacOS) folder config
 .DS_Store
+
+# agentlinker auto-generated (merged content, backups)
+.agents/merged/
+.agents/backup/
+
+# Client symlink folders (local to each machine)
+.claude/
+.codex/
+.cursor/
+.factory/
+.opencode/
